--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "php": "^7.0",
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+    "webarchitect609/log-tools": "^1.0"
   },
   "autoload": {
     "psr-4": {
