--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     }
   ],
   "require": {
-    "php": "^7.0",
+    "php": "^7.4",
     "psr/log": "^1.0",
-    "webarchitect609/log-tools": "^1.0"
+    "webarchitect609/log-tools": "^1.0 || ^2.0"
   },
   "autoload": {
     "psr-4": {
