--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,12 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 || ^8.0",
     "psr/log": "^1.0",
     "webarchitect609/log-tools": "^1.0 || ^2.0"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
